--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,13 +1,53 @@
+# .readthedocs.yaml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+#
+# IMPORTANT: For multi-language support without i18n, you need to:
+# 1. Create two separate projects in ReadTheDocs admin panel:
+#    - Main project (Russian): vibemq (uses docs/ru/conf.py)
+#    - Translation project (English): vibemq-en (uses docs/en/conf.py)
+# 2. In the Russian project admin, go to Translations and add English project
+# 3. Each project should have its own .readthedocs.yaml pointing to the correct conf.py
+#
+# For Russian project, use: sphinx.configuration: docs/ru/conf.py
+# For English project, use: sphinx.configuration: docs/en/conf.py
+
 version: 2
 
+# Set the OS, Python version and other tools you might need
 build:
   os: ubuntu-24.04
   tools:
     python: "3.13"
+  apt_packages:
+    - gettext
+  jobs:
+    post_checkout:
+      # Cancel building pull requests when there aren't changes in the docs directory or YAML file.
+      - |
+        if [ "$READTHEDOCS_VERSION_TYPE" = "external" ] && ! git diff --quiet origin/main -- docs/ .readthedocs.yaml; then
+          exit 1;
+        fi
 
+# Build documentation
+# IMPORTANT: In ReadTheDocs admin, set the configuration file to:
+# - docs/ru/conf.py for Russian project
+# - docs/en/conf.py for English project
 sphinx:
-   configuration: docs/conf.py
+  configuration: docs/ru/conf.py  # Change to docs/en/conf.py for English project
+  fail_on_warning: false
 
+# Optionally build your docs in additional formats such as PDF and ePub
+formats:
+  - pdf
+  - epub
+
+# Declare the Python requirements required to build your documentation
 python:
-   install:
-   - requirements: docs/requirements.txt
+  install:
+    - requirements: docs/requirements.txt
+
+# Submodules configuration (if needed)
+submodules:
+  include: []
+  recursive: false
